# RWTH-SAM

./: .gitignore  README.md  rwth_sam_conda.yml  setup.cfg  tox.ini
src/rwth_sam/: __init__.py  _reader.py  _ui_elements.py  _widget.py  _writer.py  napari.yaml
src/rwth_sam/_tests/: test_reader.py  test_widget.py  test_writer.py
