[metadata]
name = RWTH-SAM
version = attr: rwth_sam.__version__
description = A plugin for segmenting images using the Segment Anything model with focus on 3d CT-images of batteries
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mazenidrees/RWTH-SAM
author = Mazen Idrees
author_email = mazen.adris@rwth-aachen.de
license = Apache-2.0
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/mazenidrees/RWTH-SAM/issues
    Documentation = https://github.com/mazenidrees/RWTH-SAM#README.md
    Source Code = https://github.com/mazenidrees/RWTH-SAM
    User Support = https://github.com/mazenidrees/RWTH-SAM/issues

[options]
packages = find:
install_requires =
    numpy
    magicgui
    qtpy
    napari
    vispy
    tqdm
    napari-nifti
    superqt
    # git+https://github.com/facebookresearch/segment-anything.git@main

python_requires = >=3.8
include_package_data = True
package_dir =
    =src

# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    RWTH-SAM = rwth_sam:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5


[options.package_data]
* = *.yaml
